k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sheep-breeding
  labels:
    name: sheep-breeding
